--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon server.js",
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "init-db": "node scripts/runSQLScript.js"
+    "init-db": "node scripts/runSQLScript.js",
+    "migrate": "node migrations/migrate.js"
   },
   "repository": {
     "type": "git",
@@ -22,11 +23,12 @@
   },
   "homepage": "https://github.com/marianalreis/TickIN-PI#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "nodemon": "^3.1.10",
-    "pg": "^8.15.6"
+    "pg": "^8.16.0"
   },
   "directories": {
     "test": "tests"
