feat: rotas funcionando

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_HOST=aws-0-sa-east-1.pooler.supabase.com
 DB_PORT=5432
-DB_USER=postgres.mywlnwdvlkwccjfrtnov
-DB_PASSWORD=Juma&Chloe
-DB_DATABASE=postgres
+DB_USER=postgres.fmcsjnwxvzauxnvpdrnq
+DB_PASSWORD="Juma&Chloe0202"
+DB_NAME=postgres
 DB_SSL=true
 PORT=3000
