--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tickin",
   "version": "1.0.0",
-  "description": "Sistema de gerenciamento de eventos",
+  "description": "Sistema de gerenciamento de eventos TickIN",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -14,12 +14,13 @@
     "start:clean": "node scripts/killPort.js && node server.js"
   },
   "dependencies": {
-    "axios": "^1.6.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "ejs": "^3.1.10",
     "express": "^4.18.2",
-    "nodemon": "^3.1.10",
-    "pg": "^8.16.0"
+    "express-session": "^1.17.3",
+    "ejs": "^3.1.9",
+    "pg": "^8.11.3",
+    "method-override": "^3.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
